Changed layout of tables and fixed *not* in algorithm

--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -104,7 +104,7 @@
     "\n",
     "```python\n",
     "# assert Expression, Message\n",
-    "assert is_sorted(vec, lo, hi), \"Vector is not sorted\"\n",
+    "assert is_sorted(vec, lo, hi), \"Array is not sorted\"\n",
     "```\n",
     "\n",
     "To disable assertion in runtime, you can call Python using `-O` as:\n",
@@ -249,7 +249,7 @@
     "## Merge Sort Trace\n",
     "\n",
     "| call                               |   0   |   1   |   2   |   3   |   4   |   5   |   6   |   7   |   8   |   9   |  10   |  11   |  12   |  13   |  14   |  15   |\n",
-    "| :--------------------------------- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- | ----- |\n",
+    "| :--------------------------------- | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: | :---: |\n",
     "| Init:                              | **M** | **E** | **R** | **G** | **E** | **S** | **O** | **R** | **T** | **E** | **X** | **A** | **M** | **P** | **L** | **E** |\n",
     "| merge(vec, aux, **0**, 0, *1*)     | **E** | **M** |   R   |   G   |   E   |   S   |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
     "| merge(vec, aux, **2**, 2, *3*)     |   E   |   M   | **G** | **R** |   E   |   S   |   O   |   R   |   T   |   E   |   X   |   A   |   M   |   P   |   L   |   E   |\n",
@@ -276,12 +276,12 @@
     "\n",
     "Mergesort uses at most $N \\lg N$ compares and $6N \\lg N$ array accesses to sort any array of size $N$. To understand it, consider that the number of compares $C(N)$ and array accesses $A(N)$ to mergesort an array of size $N$ satisfy the recurrences:\n",
     "\n",
-    "$$C(N) \\leq C(\\lceil N/2\\rceil) + C(\\lfloor N/2 \\rfloor) + N \\text{for} N > 1, \\text{with} C(1) = 0$$<br>\n",
-    "$$A(N) \\leq A(\\lceil N/2\\rceil) + A(\\lfloor N/2 \\rfloor) + 6N \\text{for} N > 1, \\text{with} A(1) = 0$$\n",
+    "$$C(N) \\leq C(\\lceil N/2\\rceil) + C(\\lfloor N/2 \\rfloor) + N \\hspace{0.4cm} \\text{for} \\hspace{0.4cm} N > 1, \\hspace{0.4cm} \\text{with} \\hspace{0.4cm} C(1) = 0$$<br>\n",
+    "$$A(N) \\leq A(\\lceil N/2\\rceil) + A(\\lfloor N/2 \\rfloor) + 6N \\hspace{0.4cm} \\text{for} \\hspace{0.4cm} N > 1, \\hspace{0.4cm} \\text{with} \\hspace{0.4cm} A(1) = 0$$\n",
     "\n",
     "where $C(\\lceil N/2\\rceil)$ and $A(\\lceil N/2\\rceil)$ represent the left half, $C(\\lfloor N/2 \\rfloor)$ and $A(\\lfloor N/2 \\rfloor)$ the right half, and finally, $N$ and $6N$ are the merge. We solve the recurrence when $N$ is a power of 2 (result holds for all $N$).\n",
     "\n",
-    "$$ D(N) = 2D(N/2) + N, \\text{for} N > 1, \\text{with} D(1) = 0$$\n",
+    "$$ D(N) = 2D(N/2) + N, \\hspace{0.4cm} \\text{for} \\hspace{0.4cm} N > 1, \\hspace{0.4cm} \\text{with} \\hspace{0.4cm} D(1) = 0$$\n",
     "\n",
     "\n",
     "## Improvements in Mergesort\n",
@@ -312,7 +312,7 @@
     "    mid = lo + (hi - lo)/2\n",
     "    self.sort(vec, aux, lo, mid)\n",
     "    self.sort(vec, aux, mid+1, hi)\n",
-    "    if (!less(vec[mid+1], vec[mid])) \n",
+    "    if not less(vec[mid+1], vec[mid]):\n",
     "        return vec\n",
     "    vec = self.merge(vec, aux, lo, mid, hi)\n",
     "    return vec\n",
@@ -530,11 +530,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Stability\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -595,15 +596,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&#9744; "
+    "5. Given an array of points, which of the following approaches would be least useful for removing duplicate points? Assume the point data type has the following three orders:<br>\n",
+    "\n",
+    "- A natural order that compares by x-coordinate and breaks ties by y-coordinate.<br>\n",
+    "- One comparator that compares by x-coordinate; another by y-coordiante.<br>\n",
+    "*Note*: quicksort is an efficient, but unstable, sorting algorithm.\n",
+    "\n",
+    "&#9744; quicksort by the natural order<br>\n",
+    "&#9744; quicksort by x-coordinate; mergesort by y-coordinate<br>\n",
+    "&#9745; mergesort by x-coordinate; quicksort by y-coordinate<br>\n",
+    "&#9744; mergesort by x-coordinate; mergesort by y-coordinate \n",
+    "\n",
+    "**Answer**: Although Mergesort is a stable algorithm, the quicksort is not stable, what does not guarantee that equal points will be adjacent in the final sorted order."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "&#9744; "
+   ]
   }
  ],
  "metadata": {
