Stability of algorithms

--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -534,7 +534,166 @@
    "metadata": {},
    "source": [
     "# Stability\n",
-    "\n"
+    "\n",
+    "Stability in sorting algorithms is the characteristic that maintains the relative order of items with equal keys. For example, consider the command `Selection.sort(vec, Student.BY_NAME)` illustrated in table below:\n",
+    "\n",
+    "| Student | Section | Grade | Phone        | Address      |\n",
+    "| :------ | :-----: | :---: | :----------: | :----------: |\n",
+    "| Andrew  |    3    |   A   | 664-480-0023 | 097 Little   |\n",
+    "| Battle  |    4    |   C   | 874-088-1212 | 121 Whitman  |\n",
+    "| Chen    |    3    |   A   | 991-878-4944 | 308 Blair    |\n",
+    "| Fox     |    3    |   A   | 884-232-5341 | 11 Dickinson |\n",
+    "| Furia   |    1    |   A   | 766-093-9873 | 101 Brown    |\n",
+    "| Gazsi   |    4    |   B   | 766-093-9873 | 101 Brown    |\n",
+    "| Kanaga  |    3    |   B   | 898-122-9643 | 22 Brown     |\n",
+    "| Rohde   |    2    |   A   | 232-343-5555 | 343 Forbes   |\n",
+    "\n",
+    "Now, consider that we want to sort all items by section with the command `Selection.sort(vec, Student.BY_SECTION)`. It would generate the following table:\n",
+    "\n",
+    "| Student | Section | Grade | Phone        | Address      |\n",
+    "| :------ | :-----: | :---: | :----------: | :----------: |\n",
+    "| Furia   |    1    |   A   | 766-093-9873 | 101 Brown    |\n",
+    "| Rohde   |    2    |   A   | 232-343-5555 | 343 Forbes   |\n",
+    "| Kanaga  |    3    |   B   | 898-122-9643 | 22 Brown     |\n",
+    "| Chen    |    3    |   A   | 991-878-4944 | 308 Blair    |\n",
+    "| Fox     |    3    |   A   | 884-232-5341 | 11 Dickinson |\n",
+    "| Andrew  |    3    |   A   | 664-480-0023 | 097 Little   |\n",
+    "| Gazsi   |    4    |   B   | 766-093-9873 | 101 Brown    |\n",
+    "| Battle  |    4    |   C   | 874-088-1212 | 121 Whitman  |\n",
+    "\n",
+    "As we can see, names are not sorted anymore by the first letter. It indicates that the algorithm for sorting elements is not stable. If it was stable, elements would be sorted by first letter and then by section. Consider a second example, where elements are first sorted by an unstable algorithm and then by a stable algorithm.\n",
+    "\n",
+    "<table>\n",
+    "<tr>\n",
+    "    <th>Sorted by Time </th><th>Sorte by Location</th><th>Sorte by Location and Time</th>\n",
+    "</tr>\n",
+    "<tr>\n",
+    "<td>\n",
+    "    \n",
+    "| Location | Time     |\n",
+    "| :------- | :------: |\n",
+    "| Chicago  | 09:00:00 |\n",
+    "| Phoenix  | 09:00:03 |\n",
+    "| Houston  | 09:00:13 |\n",
+    "| Chicago  | 09:00:59 |\n",
+    "| Houston  | 09:01:10 |\n",
+    "| Chicago  | 09:03:13 |\n",
+    "| Seattle  | 09:10:11 |\n",
+    "| Seattle  | 09:10:25 |\n",
+    "| Phoenix  | 09:14:25 |\n",
+    "| Chicago  | 09:19:32 |\n",
+    "| Chicago  | 09:19:46 |\n",
+    "| Chicago  | 09:21:05 |\n",
+    "| Seattle  | 09:22:43 |\n",
+    "| Seattle  | 09:22:54 |\n",
+    "| Chicago  | 09:25:52 |\n",
+    "| Chicago  | 09:35:21 |\n",
+    "| Seattle  | 09:36:14 |\n",
+    "| Phoenix  | 09:37:44 |\n",
+    "\n",
+    "</td><td>\n",
+    "\n",
+    "| Location | Time     |\n",
+    "| :------- | :------: |\n",
+    "| Chicago  | 09:25:52 |\n",
+    "| Chicago  | 09:03:13 |\n",
+    "| Chicago  | 09:21:05 |\n",
+    "| Chicago  | 09:19:46 |\n",
+    "| Chicago  | 09:19:32 |\n",
+    "| Chicago  | 09:00:00 |\n",
+    "| Chicago  | 09:35:21 |\n",
+    "| Chicago  | 09:00:59 |\n",
+    "| Houston  | 09:01:10 |\n",
+    "| Houston  | 09:00:13 |\n",
+    "| Phoenix  | 09:37:44 |\n",
+    "| Phoenix  | 09:00:03 |\n",
+    "| Phoenix  | 09:14:25 |\n",
+    "| Seattle  | 09:10:25 |\n",
+    "| Seattle  | 09:36:14 |\n",
+    "| Seattle  | 09:22:43 |\n",
+    "| Seattle  | 09:10:11 |\n",
+    "| Seattle  | 09:22:54 |\n",
+    "\n",
+    "</td><td>\n",
+    "\n",
+    "| Location | Time     |\n",
+    "| :------- | :------: |\n",
+    "| Chicago  | 09:00:00 |\n",
+    "| Chicago  | 09:00:59 |\n",
+    "| Chicago  | 09:03:13 |\n",
+    "| Chicago  | 09:19:32 |\n",
+    "| Chicago  | 09:19:46 |\n",
+    "| Chicago  | 09:21:05 |\n",
+    "| Chicago  | 09:25:52 |\n",
+    "| Chicago  | 09:35:21 |\n",
+    "| Houston  | 09:00:13 |\n",
+    "| Houston  | 09:01:10 |\n",
+    "| Phoenix  | 09:00:03 |\n",
+    "| Phoenix  | 09:14:25 |\n",
+    "| Phoenix  | 09:37:44 |\n",
+    "| Seattle  | 09:10:11 |\n",
+    "| Seattle  | 09:10:25 |\n",
+    "| Seattle  | 09:22:43 |\n",
+    "| Seattle  | 09:22:54 |\n",
+    "| Seattle  | 09:36:14 |\n",
+    "\n",
+    "</td>\n",
+    "</tr>\n",
+    "</table>\n",
+    "\n",
+    "As we can see, the first algorithm (unstable) sorted elements by location, but removed the order of time that first existed. When sorting the second table using a stable algorithm, the elements keep ordered by location and then time. From the algorithms seen so far, Insertion sort and Mergesort are stable algorithms. On the other hand, Selection sort and Shellsort are not. \n",
+    "\n",
+    "### Stable and not stable algorithms\n",
+    "\n",
+    "Analyzing the algorithm of Insertion Sort, we can see that it does not change the order of elements that contain the same key.\n",
+    "\n",
+    "```python\n",
+    "class Insertion(object):\n",
+    "    def sort(self, vec):\n",
+    "        N = len(vec)\n",
+    "        for i in range(1, N+1):\n",
+    "            for j in range(i-1, 0, -1):\n",
+    "                if self.less(vec[j], vec[j-1]):\n",
+    "                    self.exchange(vec, j, j-1)\n",
+    "                else:\n",
+    "                    break\n",
+    "        return vec\n",
+    "```\n",
+    "\n",
+    "The table below illustrates the application of Insertion Sort and how it does not change the order of elements with the same key. We can see that equal items never move past each other.\n",
+    "\n",
+    "|  i  |  j  |   0    |    1    |    2   |  3   |    4   |\n",
+    "| :-: | :-: | :----: | :-----: | :----: | :--: | :----: |\n",
+    "|  0  |  0  | **B1** |  *A1*   |  *A2*  | *A3* |  *B2*  |\n",
+    "|  1  |  0  | **A1** |   B1    |  *A2*  | *A3* |  *B2*  |\n",
+    "|  2  |  1  |   A1   | **A2**  |   B1   | *A3* |  *B2*  |\n",
+    "|  3  |  2  |   A1   |   A2    | **A3** |  B1  |  *B2*  |\n",
+    "|  4  |  4  |   A1   |   A2    |   A3   |  B1  | **B2** |\n",
+    "|  -  |  -  |   A1   |   A2    |   A3   |  B1  |   B2   |\n",
+    "\n",
+    "On the other hand, Selection Sort is not a stable algorithm. The algorithm is illustred below:\n",
+    "\n",
+    "```python\n",
+    "class Selection(object):\n",
+    "    def sort(self, vec):\n",
+    "        N = len(vec)\n",
+    "        for i in range(N):\n",
+    "            minval = i\n",
+    "            for j in range(i+1, N):\n",
+    "                if self.less(vec[j], vec[minval]):\n",
+    "                    minval = j\n",
+    "            self.exchange(vec, i, minval)\n",
+    "        return vec\n",
+    "```\n",
+    "\n",
+    "And the table below illustrates the example, where long-distance exchange might move an item past some equal item, leading to a non stable algorithm.\n",
+    "\n",
+    "|  i  | min  |  0   |   1    |   2    |\n",
+    "| :-: | :--: | :--: | :----: | :----: |\n",
+    "|  0  |  2   |  B1  |   B2   |  *A*   |\n",
+    "|  1  |  1   |  *A* | **B2** |   B1   |\n",
+    "|  2  |  2   |  *A* |  *B2*  | **B1** |\n",
+    "|  -  |  -   |   A  |   B2   |   B1   |"
    ]
   },
   {
@@ -614,7 +773,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "&#9744; "
+    "# Interview Questions: Mergesort "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. **Merging with smaller auxiliary array**. Suppose that the subarray `𝚊[𝟶]` to `𝚊[𝚗-𝟷]` is sorted and the subarray `𝚊[𝚗]` to `𝚊[𝟸∗𝚗-𝟷]` is sorted. How can you merge the two subarrays so that `𝚊[𝟶]` to `𝚊[𝟸∗𝚗-𝟷]` is sorted using an auxiliary array of length `n` (instead of `2n`)?\n",
+    "\n",
+    "**Answer**:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. **Counting inversions**. An inversion in an array `a[]` is a pair of entries `a[i]` and `a[j]` such that `i < j` but `a[i] > a[j]`. Given an array, design a linearithmic algorithm to count the number of inversions.\n",
+    "\n",
+    "**Answer**: \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. **Shuffling a linked list**. Given a singly-linked list containing `n` items, rearrange the items uniformly at random. Your algorithm should consume a logarithmic (or constant) amount of extra memory and run in time proportional to $n \\log n$ in the worst case.\n",
+    "\n",
+    "**Answer**: \n"
    ]
   }
  ],
