--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -780,9 +780,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. **Merging with smaller auxiliary array**. Suppose that the subarray `𝚊[𝟶]` to `𝚊[𝚗-𝟷]` is sorted and the subarray `𝚊[𝚗]` to `𝚊[𝟸∗𝚗-𝟷]` is sorted. How can you merge the two subarrays so that `𝚊[𝟶]` to `𝚊[𝟸∗𝚗-𝟷]` is sorted using an auxiliary array of length `n` (instead of `2n`)?\n",
+    "1. **Merging with smaller auxiliary array**. Suppose that the subarray `𝚊[𝟶]` to `𝚊[𝚗-𝟷]` is sorted and the subarray `𝚊[𝚗]` to `𝚊[𝟸𝚗-𝟷]` is sorted. How can you merge the two subarrays so that `𝚊[𝟶]` to `𝚊[𝟸𝚗-𝟷]` is sorted using an auxiliary array of length `n` (instead of `2n`)?\n",
     "\n",
-    "**Answer**:\n"
+    "**Answer**: We can use the auxiliary array to copy the first subarray (from 0 to n-1). Then, we initialize two indices `i` and `j`, where `i` corresponds to the elements of the auxiliary array and `j` to the elements of the subarray (from `n` to `2n-1`). To populate the original array with the sorted elements, we create a for loop from `0` to `2n-1`, where we test if our element at `a[i]` is less than `a[j]`. If so, we set `a[k]` with `a[i]` and increase the value of `i`. Otherwise, we set `a[k]` with the value of `a[j]` and increse `j`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1:\n",
+      "Initial array: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Sorted array : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "\n",
+      "Test 2:\n",
+      "Initial array: [1, 3, 5, 7, 9, 2, 4, 6, 8, 10]\n",
+      "Sorted array : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "\n",
+      "Test 3:\n",
+      "Initial array: [2, 4, 6, 8, 10, 1, 3, 5, 7, 9]\n",
+      "Sorted array : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "\n",
+      "Test 4:\n",
+      "Initial array: [6, 7, 8, 9, 10, 1, 2, 3, 4, 5]\n",
+      "Sorted array : [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merging_arrays(vec, n):\n",
+    "    aux = vec[0:n]\n",
+    "    i, j = 0, n\n",
+    "    for k in range(len(vec)):\n",
+    "        if i == n:\n",
+    "            vec[k] = vec[j]\n",
+    "            j += 1\n",
+    "            continue\n",
+    "        if j == len(vec):\n",
+    "            vec[k] = aux[i]\n",
+    "            i += 1\n",
+    "            continue\n",
+    "            \n",
+    "        if aux[i] < vec[j]:\n",
+    "            vec[k] = aux[i]\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            vec[k] = vec[j]\n",
+    "            j += 1\n",
+    "    return vec\n",
+    "\n",
+    "n = 5\n",
+    "vec = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "print('Test 1:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "print('Sorted array : {}'.format(merging_arrays(vec, n)))\n",
+    "print('')\n",
+    "\n",
+    "vec = [1, 3, 5, 7, 9, 2, 4, 6, 8, 10]\n",
+    "print('Test 2:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "print('Sorted array : {}'.format(merging_arrays(vec, n)))\n",
+    "print('')\n",
+    "\n",
+    "vec = [2, 4, 6, 8, 10, 1, 3, 5, 7, 9]\n",
+    "print('Test 3:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "print('Sorted array : {}'.format(merging_arrays(vec, n)))\n",
+    "print('')\n",
+    "\n",
+    "vec = [6, 7, 8, 9, 10, 1, 2, 3, 4, 5]\n",
+    "print('Test 4:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "print('Sorted array : {}'.format(merging_arrays(vec, n)))"
    ]
   },
   {
@@ -791,7 +865,128 @@
    "source": [
     "2. **Counting inversions**. An inversion in an array `a[]` is a pair of entries `a[i]` and `a[j]` such that `i < j` but `a[i] > a[j]`. Given an array, design a linearithmic algorithm to count the number of inversions.\n",
     "\n",
-    "**Answer**: \n"
+    "**Answer**: We can apply a divide and conquer strategy, which divides a big problem into multiple sub small problems recursively. In this strategy, we divide the array into two equal size arrays each time. For each small array, we compare the elements in order to verify if there is an inversion. In case of inversion, we count the inversion and return the sorted array. Using a Mergesort-like algorithm, we join the sorted arrays, counting the inversions existent between them. The number of inversions existent in an array of the right side (second half) is equal to the number of elements that still have to sort in the left array (first half)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1:\n",
+      "Initial array: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Number of inversions : 0\n",
+      "\n",
+      "Test 2:\n",
+      "Initial array: [1, 2, 4, 3, 5, 6, 8, 7, 9, 10]\n",
+      "Number of inversions : 2\n",
+      "\n",
+      "Test 3:\n",
+      "Initial array: [10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "Number of inversions : 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_inversions(vec):\n",
+    "    if len(vec) == 1:\n",
+    "        return vec, 0\n",
+    "    \n",
+    "    mid = len(vec)/2\n",
+    "    vleft, vright = vec[:mid], vec[mid:]\n",
+    "    vleft, cl = count_inversions(vleft)\n",
+    "    vright, cr = count_inversions(vright)\n",
+    "    aux = []\n",
+    "\n",
+    "    i, j = 0, 0\n",
+    "    nb_inv = 0 + cl + cr\n",
+    "    while i < len(vleft) and j < len(vright):\n",
+    "        if vleft[i] <= vright[j]:\n",
+    "            aux.append(vleft[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            aux.append(vright[j])\n",
+    "            j += 1\n",
+    "            nb_inv += (len(vleft)-i)\n",
+    "    aux += vleft[i:]\n",
+    "    aux += vright[j:]\n",
+    "    return aux, nb_inv\n",
+    "\n",
+    "vec = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "print('Test 1:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "_, nb_inv = count_inversions(vec)\n",
+    "print('Number of inversions : {}'.format(nb_inv))\n",
+    "print('')\n",
+    "      \n",
+    "vec = [1, 2, 4, 3, 5, 6, 8, 7, 9, 10]\n",
+    "print('Test 2:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "_, nb_inv = count_inversions(vec)\n",
+    "print('Number of inversions : {}'.format(nb_inv))\n",
+    "print('')\n",
+    "      \n",
+    "vec = [10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+    "print('Test 3:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "_, nb_inv = count_inversions(vec)\n",
+    "print('Number of inversions : {}'.format(nb_inv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test 1:\n",
+      "Initial array: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "Number of inversions : 0\n",
+      "\n",
+      "Test 2:\n",
+      "Initial array: [1, 2, 4, 3, 5, 6, 8, 7, 9, 10]\n",
+      "Number of inversions : 2\n",
+      "\n",
+      "Test 3:\n",
+      "Initial array: [10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "Number of inversions : 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Here the algorithm for solving using O(n^2)\n",
+    "def count_inversions(vec):\n",
+    "    nb_inv = 0\n",
+    "    for i in range(len(vec)):\n",
+    "        for j in range(i+1, len(vec)):\n",
+    "            if vec[i]  > vec[j]:\n",
+    "                nb_inv += 1\n",
+    "    return nb_inv\n",
+    "\n",
+    "   \n",
+    "vec = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "print('Test 1:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "print('Number of inversions : {}'.format(count_inversions(vec)))\n",
+    "print('')\n",
+    "      \n",
+    "vec = [1, 2, 4, 3, 5, 6, 8, 7, 9, 10]\n",
+    "print('Test 2:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "print('Number of inversions : {}'.format(count_inversions(vec)))\n",
+    "print('')\n",
+    "      \n",
+    "vec = [10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+    "print('Test 3:')\n",
+    "print('Initial array: {}'.format(vec))\n",
+    "print('Number of inversions : {}'.format(count_inversions(vec)))"
    ]
   },
   {
