--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -995,7 +995,7 @@
    "source": [
     "3. **Shuffling a linked list**. Given a singly-linked list containing `n` items, rearrange the items uniformly at random. Your algorithm should consume a logarithmic (or constant) amount of extra memory and run in time proportional to $n \\log n$ in the worst case.\n",
     "\n",
-    "**Answer**: \n"
+    "**Answer**: We can use Mergesort-like algorithm, where we divide the singly-linked list into two shuffled lists and then merge elements uniformly at random, *i.e.*, shuffle the left half and the right half, then merge them by randomly selecting from the two lists.\n"
    ]
   }
  ],
