Solving the 3rd question

--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -997,6 +997,96 @@
     "\n",
     "**Answer**: We can use Mergesort-like algorithm, where we divide the singly-linked list into two shuffled lists and then merge elements uniformly at random, *i.e.*, shuffle the left half and the right half, then merge them by randomly selecting from the two lists.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, None]\n",
+      "[5, 6, 7, None]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Node(object):\n",
+    "    def __init__(self, value, next=None):\n",
+    "        self.value = value\n",
+    "        self.next = next\n",
+    "        \n",
+    "def print_list(head):\n",
+    "    seq = '['+str(head.value)+', '\n",
+    "    while head.next != None:\n",
+    "        seq += str(head.next.value)+', '\n",
+    "        head = head.next\n",
+    "    seq += 'None]'\n",
+    "    print(seq)\n",
+    "        \n",
+    "def merge_shuffle(head):\n",
+    "    if head == None or head.next == None:\n",
+    "        return head\n",
+    "    \n",
+    "    # Find the middle of the list by using slow and fast pointers\n",
+    "    slow = head\n",
+    "    fast = head.next\n",
+    "\n",
+    "    while fast.next != None:\n",
+    "        fast = fast.next\n",
+    "        slow = slow.next\n",
+    "        if fast.next != None:\n",
+    "            fast = fast.next\n",
+    "    head2 = slow.next\n",
+    "    slow.next = None\n",
+    "        \n",
+    "    print_list(head)\n",
+    "    print_list(head2)\n",
+    "    \n",
+    "linkedlist = Node(1, Node(2, Node(3, Node(4, Node(5, Node(6, Node(7, None)))))))\n",
+    "merge_shuffle(linkedlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "    \n",
+    "a='''\n",
+    "    def shuffle(self, vec, aux, lo, hi):\n",
+    "        if hi <= lo:\n",
+    "            return vec\n",
+    "        mid = lo + (hi - lo)/2\n",
+    "        self.shuffle(vec, aux, lo, mid)\n",
+    "        self.shuffle(vec, aux, mid+1, hi)\n",
+    "        vec = self.join_shuffles(vec, aux, lo, mid, hi)\n",
+    "        return vec\n",
+    "\n",
+    "    def join_shuffles(self, vec, aux, lo, mid, hi):\n",
+    "        aux = vec[:]\n",
+    "        i, j = lo, mid+1\n",
+    "\n",
+    "        for k in range(lo, hi):\n",
+    "            if i > mid:\n",
+    "                vec[k] = aux[j]\n",
+    "                j += 1\n",
+    "            elif j > hi:\n",
+    "                vec[k] = aux[i]\n",
+    "                i += 1\n",
+    "            elif self.less(aux[j], aux[i]):\n",
+    "                vec[k] = aux[j]\n",
+    "                j += 1\n",
+    "            else:\n",
+    "                vec[k] = aux[i]\n",
+    "                i += 1\n",
+    "        return vec\n",
+    "'''"
+   ]
   }
  ],
  "metadata": {
