Finished merge sort quiz

--- a/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
+++ b/Coursera/Princeton/Algorithms-Part-1/Week 3/1. Merge Sort.ipynb
@@ -782,7 +782,7 @@
    "source": [
     "1. **Merging with smaller auxiliary array**. Suppose that the subarray `𝚊[𝟶]` to `𝚊[𝚗-𝟷]` is sorted and the subarray `𝚊[𝚗]` to `𝚊[𝟸𝚗-𝟷]` is sorted. How can you merge the two subarrays so that `𝚊[𝟶]` to `𝚊[𝟸𝚗-𝟷]` is sorted using an auxiliary array of length `n` (instead of `2n`)?\n",
     "\n",
-    "**Answer**: We can use the auxiliary array to copy the first subarray (from 0 to n-1). Then, we initialize two indices `i` and `j`, where `i` corresponds to the elements of the auxiliary array and `j` to the elements of the subarray (from `n` to `2n-1`). To populate the original array with the sorted elements, we create a for loop from `0` to `2n-1`, where we test if our element at `a[i]` is less than `a[j]`. If so, we set `a[k]` with `a[i]` and increase the value of `i`. Otherwise, we set `a[k]` with the value of `a[j]` and increse `j`."
+    "**Answer**: We can use the auxiliary array to copy the first subarray (from 0 to n-1). Then, we initialize two indices `i` and `j`, where `i` corresponds to the elements of the auxiliary array and `j` to the elements of the subarray (from `n` to `2n-1`). To populate the original array with the sorted elements, we create a for loop from `0` to `2n-1`, where we test if our element at `a[i]` is less than `a[j]`. If so, we set `a[k]` with `a[i]` and increase the value of `i`. Otherwise, we set `a[k]` with the value of `a[j]` and increase `j`."
    ]
   },
   {
@@ -865,7 +865,7 @@
    "source": [
     "2. **Counting inversions**. An inversion in an array `a[]` is a pair of entries `a[i]` and `a[j]` such that `i < j` but `a[i] > a[j]`. Given an array, design a linearithmic algorithm to count the number of inversions.\n",
     "\n",
-    "**Answer**: We can apply a divide and conquer strategy, which divides a big problem into multiple sub small problems recursively. In this strategy, we divide the array into two equal size arrays each time. For each small array, we compare the elements in order to verify if there is an inversion. In case of inversion, we count the inversion and return the sorted array. Using a Mergesort-like algorithm, we join the sorted arrays, counting the inversions existent between them. The number of inversions existent in an array of the right side (second half) is equal to the number of elements that still have to sort in the left array (first half)."
+    "**Answer**: We can apply a divide and conquer strategy, which divides a big problem into multiple sub small problems recursively. In this strategy, we divide the array into two equal size arrays each time. For each small array, we compare the elements in order to verify if there is an inversion. In the case of inversion, we count the inversion and return the sorted array. Using a Mergesort-like algorithm, we join the sorted arrays, counting the inversions existent between them. The number of inversions existent in an array of the right side (second half) is equal to the number of elements that still have to sort in the left array (first half)."
    ]
   },
   {
@@ -995,44 +995,25 @@
    "source": [
     "3. **Shuffling a linked list**. Given a singly-linked list containing `n` items, rearrange the items uniformly at random. Your algorithm should consume a logarithmic (or constant) amount of extra memory and run in time proportional to $n \\log n$ in the worst case.\n",
     "\n",
-    "**Answer**: We can use Mergesort-like algorithm, where we divide the singly-linked list into two shuffled lists and then merge elements uniformly at random, *i.e.*, shuffle the left half and the right half, then merge them by randomly selecting from the two lists.\n"
+    "**Answer**: We can use Mergesort-like algorithm, where we divide the singly-linked list into two shuffled lists and then merge elements uniformly at random, *i.e.*, shuffle the left half and the right half, then merge them by randomly selecting elements from the two lists."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ":: 1 1 2 1\n",
-      "[None, None]\n",
-      ":: 3 1 4 1\n",
-      "[None, None]\n",
-      ":: 1 2 3 2\n",
-      "[None, 3, 1, None]\n",
-      ":: 5 1 6 1\n",
-      "[None, None]\n",
-      ":: 5 2 7 1\n",
-      "[None, 7, None]\n",
-      ":: 1 4 5 3\n",
-      "[None, 5, 1, None]\n"
+      "Initial linked list: [1, 2, 3, 4, 5, 6, 7, None]\n",
+      "Shuffled list:       [7, 3, 5, 6, 4, 1, 2, None]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<__main__.Node at 0x7f92283f8c10>"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "from IPython.core.debugger import set_trace\n",
     "import random\n",
     "\n",
     "class Node(object):\n",
@@ -1051,14 +1032,37 @@
     "    seq += 'None]'\n",
     "    return seq\n",
     "    \n",
-    "def shuffle_heads(head1, size_head1, head2, size_head2):\n",
-    "    print '::', head1.value, size_head1, head2.value, size_head2\n",
-    "    head = Node(None)\n",
-    "    current = head\n",
-    "    for k in range(size_head1 + size_head2 - 2):\n",
-    "        # take into account the size of the arrays\n",
-    "        if random.random() < (size_head1 / (size_head1 + size_head2)):\n",
-    "            if head1:\n",
+    "def partition(head):\n",
+    "    if not head or not head.next:\n",
+    "        return head, None\n",
+    "\n",
+    "    slow = head\n",
+    "    size_slow = 1\n",
+    "    fast = head.next\n",
+    "    size_fast = 1\n",
+    "    while fast:\n",
+    "        fast = fast.next\n",
+    "        size_fast += 1\n",
+    "        if fast:\n",
+    "            slow = slow.next\n",
+    "            size_slow += 1\n",
+    "            fast = fast.next\n",
+    "            size_fast += 1\n",
+    "    head2 = slow.next\n",
+    "    slow.next = None\n",
+    "    return head, head2, size_slow, (size_fast-size_slow)\n",
+    "\n",
+    "def merge_arrays(head1, head2, size1, size2):\n",
+    "    first_element = True\n",
+    "    while head1 or head2:\n",
+    "        if random.random() < (float(size1) / (size1 + size2)):\n",
+    "            #print 'head1'\n",
+    "            if first_element:\n",
+    "                head = head1\n",
+    "                current = head\n",
+    "                head1 = head1.next\n",
+    "                first_element = False\n",
+    "            elif head1:\n",
     "                current.next = head1\n",
     "                head1 = head1.next\n",
     "                current = current.next\n",
@@ -1067,7 +1071,13 @@
     "                head2 = head2.next\n",
     "                current = current.next\n",
     "        else:\n",
-    "            if head2:\n",
+    "            #print 'head2'\n",
+    "            if first_element:\n",
+    "                head = head2\n",
+    "                current = head\n",
+    "                head2 = head2.next\n",
+    "                first_element = False\n",
+    "            elif head2:\n",
     "                current.next = head2\n",
     "                head2 = head2.next\n",
     "                current = current.next\n",
@@ -1075,135 +1085,27 @@
     "                current.next = head1\n",
     "                head1 = head1.next\n",
     "                current = current.next\n",
-    "        \n",
-    "    #head = head.next\n",
-    "    #print '>>',\n",
-    "    print_list(head)\n",
-    "    \n",
-    "            \n",
-    "def join_vals(head, size_head, head2, size_head2):\n",
-    "    node = head\n",
-    "    while node.next != None:\n",
-    "        node = node.next\n",
-    "    node.next = head2\n",
-    "    print get_list(head)\n",
-    "    print size_head, size_head2, size_head+size_head2\n",
-    "        \n",
-    "def merge_shuffle(head):\n",
-    "    if head == None or head.next == None:\n",
-    "        return head\n",
-    "    \n",
-    "    #print_list(head)\n",
-    "    # Find the middle of the list by using slow and fast pointers\n",
-    "    slow = head\n",
-    "    islow = 0\n",
-    "    fast = head.next\n",
-    "    ifast = 1\n",
-    "    \n",
-    "    while fast.next != None:\n",
-    "        fast = fast.next\n",
-    "        slow = slow.next\n",
-    "        islow += 1\n",
-    "        ifast += 1\n",
-    "        if fast.next != None:\n",
-    "            fast = fast.next\n",
-    "            ifast += 1\n",
-    "            \n",
-    "    head2 = slow.next\n",
-    "    slow.next = None\n",
-    "    size_head = islow + 1\n",
-    "    size_head2 = ifast - islow\n",
-    "    \n",
-    "    merge_shuffle(head)\n",
-    "    merge_shuffle(head2)\n",
-    "    #join_vals(head, size_head, head2, size_head2)\n",
-    "    #print ':',get_list(head)\n",
-    "    shuffle_heads(head, size_head, head2, size_head2)    \n",
-    "    #print('Merge: {} - {}'.format(get_list(head), get_list(head2)))\n",
-    "    #print_list(head2)\n",
+    "    head1 = None\n",
+    "    head2 = None\n",
     "    return head\n",
+    "\n",
+    "def merge_shuffle_list(head):\n",
+    "    if not head.next:\n",
+    "        return head\n",
+    "\n",
+    "    head1, head2, size1, size2 = partition(head)\n",
     "    \n",
+    "    head1 = merge_shuffle_list(head1)\n",
+    "    head2 = merge_shuffle_list(head2)\n",
+    "    head = merge_arrays(head1, head2, size1, size2)\n",
+    "    return head\n",
+    "        \n",
+    "#set_trace()        \n",
     "linkedlist = Node(1, Node(2, Node(3, Node(4, Node(5, Node(6, Node(7, None)))))))\n",
-    "merge_shuffle(linkedlist)"
+    "print('Initial linked list: {}'.format(get_list(linkedlist)))\n",
+    "shuffled = merge_shuffle_list(linkedlist)\n",
+    "print('Shuffled list:       {}'.format(get_list(shuffled)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.322360240409\n",
-      "0.47619047619\n",
-      "0.322360240409\n"
-     ]
-    }
-   ],
-   "source": [
-    "def merge_arrays(head1, size_head1, head2, size_head2):\n",
-    "    merged = None\n",
-    "    if not head1:\n",
-    "        return head2\n",
-    "    elif not head2:\n",
-    "        return head1\n",
-    "\n",
-    "    if random.random() < (size_head1 / (size_head1 + size_head2)):\n",
-    "        merged = head1\n",
-    "        merged.next = merge_arrays(head1.next, size_head1-1, head2, size_head2)\n",
-    "    else:\n",
-    "        merged = head2\n",
-    "        merged.next = merge_arrays(head1, size_head1, head2.next, size_head2-1)\n",
-    "    return merged\n",
-    "\n",
-    "def merge_shuffle(head):\n",
-    "    head1 = Node(None)\n",
-    "    head2 = Node(None)\n",
-    "\n",
-    "    if not head or not head.next:\n",
-    "        return None\n",
-    "\n",
-    "    partition(head, head1, head2)\n",
-    "    merge_shuffle(head1)\n",
-    "    merge_shuffle(head2)\n",
-    "    head = merge_arrays(head1, head2)\n",
-    "    \n",
-    "def partition(head, front, back):\n",
-    "    fast = Node(None)\n",
-    "    slow = Node(None)\n",
-    "\n",
-    "    if not head or not head.next:\n",
-    "        front = head\n",
-    "        back = None\n",
-    "    else:\n",
-    "        slow = head\n",
-    "        fast = head.next\n",
-    "\n",
-    "        while fast:\n",
-    "            fast = fast.next\n",
-    "            if fast:\n",
-    "                slow = slow.next\n",
-    "                fast = fast.next\n",
-    "        front = head\n",
-    "        back = slow.next\n",
-    "        slow.next = None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
